--- a/src/app/components/create/CreateSearchList.module.scss
+++ b/src/app/components/create/CreateSearchList.module.scss
@@ -37,15 +37,20 @@
     .list {
         flex: 1;
         display: flex;
-        margin: 20px 32px 0 0;
+        margin: 20px 32px 20px 0;
         flex-direction: column;
+        overflow-y: auto;
+
+        .loading {
+            margin: 20px 0;
+        }
     }
 
     .item {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        
+
         .content {
             display: flex;
             align-items: center;
@@ -68,8 +73,24 @@
             }
         }
 
+        .no_image_placeholder {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 80px;
+            height: 80px;
+            margin-right: 12px;
+            border-radius: 20px;
+            overflow: hidden;
+            background: #F1F3F5;
+        }
+
         .info_area {
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 80px;
 
             .title {
                 @include mixins.ellipsis;
@@ -100,9 +121,15 @@
                 }
             }
 
-            .category {
+            .category{
+                display: flex;
+                align-items: center;
+                gap: 2px;
+            }
+
+            .address {
                 display: block;
-                margin-top: 20px;
+                margin-top: 3px;
             }
         }
 
@@ -113,7 +140,7 @@
             background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' fill='none'%3E%3Cpath fill='%233C76F1' fill-opacity='.2' d='M14 25.667c6.443 0 11.666-5.223 11.666-11.666 0-6.444-5.223-11.667-11.666-11.667-6.444 0-11.667 5.223-11.667 11.667 0 6.443 5.223 11.666 11.667 11.666Z'/%3E%3Cpath stroke='%233C76F1' stroke-linecap='round' stroke-width='2' d='M14 9.5v9M18.505 13.994h-9'/%3E%3C/svg%3E") no-repeat;
         }
 
-        & + .item {
+        &+.item {
             margin-top: 20px;
         }
     }
@@ -125,7 +152,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        
+
         &::before {
             width: 145px;
             height: 145px;
