--- a/src/app/my/My.module.scss
+++ b/src/app/my/My.module.scss
@@ -107,6 +107,7 @@
 
     .list {
         display: flex;
+        width: 100%;
         flex-wrap: wrap;
         gap: 20px;
         margin-top: 32px;
