--- a/src/app/search/search.module.scss
+++ b/src/app/search/search.module.scss
@@ -67,7 +67,7 @@ body:has(.search_field_wrap) {
 .list {
     display: flex;
     width: 960px;
-    margin: 47px auto 120px;
+    margin: 47px auto 0;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
