--- a/src/app/plan/[planId]/Plan.module.scss
+++ b/src/app/plan/[planId]/Plan.module.scss
@@ -214,7 +214,7 @@
         position: absolute;
         width: 20px;
         height: 20px;
-        bottom: 32px;
+        bottom: 54px;
         left: -25px;
         background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='none'%3E%3Cpath stroke='%23F1F3F5' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m7 3 7 7-7 7'/%3E%3C/svg%3E") no-repeat;
         content: "";
@@ -286,6 +286,7 @@
     &:hover {
         cursor: pointer;
         background-color: #eee;
+        border-radius: 0 20px 20px 20px;
     }
 }
 
