--- a/src/app/components/create/destination.module.scss
+++ b/src/app/components/create/destination.module.scss
@@ -49,6 +49,10 @@
   padding: 16px 0;
   box-sizing: border-box;
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+
+  @media (max-width: 769px) {
+    width: 90%;
+  }
 }
 
 .searchInput {
@@ -72,6 +76,11 @@
   width: 100%;
   margin-bottom: 30px;
   padding: 0 15px;
+
+  @media (max-width: 769px) {
+    gap: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .item {
@@ -81,6 +90,12 @@
   max-height: 332px;
   border-radius: 20px;
   overflow: hidden;
+
+  @media (max-width: 769px) {
+    width: 150px;
+    max-height: 150px;
+    border-radius: 10px;
+  }
 }
 
 .image {
