--- a/src/app/plan/[planId]/Plan.module.scss
+++ b/src/app/plan/[planId]/Plan.module.scss
@@ -1,11 +1,9 @@
 @use "/src/app/scss/variables" as *;
 
 .list_wrap {
-    width: calc(100% - 32px);
-    margin-left: auto;
-    min-height: 0;
-    height: 100%;
+    width: 100%;
     overflow: hidden;
+    height: calc(100vh - 64px);
 }
 
 .list {
@@ -42,11 +40,11 @@
     line-height: 52px;
     cursor: pointer;
 
-    & + .item {
+    &+.item {
         margin-top: 12px;
     }
 
-    &.is_total {        
+    &.is_total {
         background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath stroke='%23E5E7EB' d='M24 24H0V0h24v24Z'/%3E%3Cpath fill='%239CA3AF' d='M7.334 2.29c.445.413.48 1.112.081 1.57L4.181 7.563a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 5.753a1.145 1.145 0 0 1 0-1.574 1.051 1.051 0 0 1 1.522 0l.993 1.023L5.807 2.37a1.053 1.053 0 0 1 1.523-.084l.004.005Zm0 7.407c.445.412.48 1.11.081 1.569l-3.234 3.703a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 13.159a1.13 1.13 0 0 1 0-1.569 1.055 1.055 0 0 1 1.522 0l.993 1.023L5.807 9.78a1.053 1.053 0 0 1 1.523-.083h.004Zm3.23-4.73c0-.82.642-1.482 1.437-1.482h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.661-1.437-1.48Zm0 7.405c0-.82.642-1.481 1.437-1.481h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.662-1.437-1.48Zm-2.875 7.406c0-.82.642-1.481 1.437-1.481h12.937c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H9.126c-.795 0-1.437-.662-1.437-1.48Zm-5.03-2.222c.571 0 1.12.235 1.524.651.404.417.631.982.631 1.571 0 .59-.227 1.155-.631 1.571-.404.417-.953.651-1.525.651s-1.12-.234-1.524-.65a2.257 2.257 0 0 1-.632-1.572c0-.589.227-1.154.632-1.57.404-.417.952-.652 1.524-.652Z'/%3E%3C/svg%3E") center/24px 24px no-repeat;
     }
 
@@ -56,13 +54,13 @@
         color: #fff;
     }
 
-    @include text-style('n1','gray5');
+    @include text-style('n1', 'gray5');
 }
 
 .total_btn {
     width: 48px;
     height: 48px;
-    background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath fill='%239CA3AF' d='M7.334 2.29c.445.413.48 1.112.081 1.57L4.181 7.563a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 5.753a1.145 1.145 0 0 1 0-1.574 1.051 1.051 0 0 1 1.522 0l.993 1.023L5.807 2.37a1.053 1.053 0 0 1 1.523-.084l.004.005Zm0 7.407c.445.412.48 1.11.081 1.569l-3.234 3.703a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 13.159a1.13 1.13 0 0 1 0-1.569 1.055 1.055 0 0 1 1.522 0l.993 1.023L5.807 9.78a1.053 1.053 0 0 1 1.523-.083h.004Zm3.23-4.73c0-.82.642-1.482 1.437-1.482h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.661-1.437-1.48Zm0 7.405c0-.82.642-1.481 1.437-1.481h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.662-1.437-1.48Zm-2.875 7.406c0-.82.642-1.481 1.437-1.481h12.937c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H9.126c-.795 0-1.437-.662-1.437-1.48Zm-5.03-2.222c.571 0 1.12.235 1.524.651.404.417.631.982.631 1.571 0 .59-.227 1.155-.631 1.571-.404.417-.953.651-1.525.651s-1.12-.234-1.524-.65a2.257 2.257 0 0 1-.632-1.572c0-.589.227-1.154.632-1.57.404-.417.952-.652 1.524-.652Z'/%3E%3C/svg%3E") center/24px 24px no-repeat;
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath fill='%239CA3AF' d='M7.334 2.29c.445.413.48 1.112.081 1.57L4.181 7.563a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 5.753a1.145 1.145 0 0 1 0-1.574 1.051 1.051 0 0 1 1.522 0l.993 1.023L5.807 2.37a1.053 1.053 0 0 1 1.523-.084l.004.005Zm0 7.407c.445.412.48 1.11.081 1.569l-3.234 3.703a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 13.159a1.13 1.13 0 0 1 0-1.569 1.055 1.055 0 0 1 1.522 0l.993 1.023L5.807 9.78a1.053 1.053 0 0 1 1.523-.083h.004Zm3.23-4.73c0-.82.642-1.482 1.437-1.482h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.661-1.437-1.48Zm0 7.405c0-.82.642-1.481 1.437-1.481h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.662-1.437-1.48Zm-2.875 7.406c0-.82.642-1.481 1.437-1.481h12.937c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H9.126c-.795 0-1.437-.662-1.437-1.48Zm-5.03-2.222c.571 0 1.12.235 1.524.651.404.417.631.982.631 1.571 0 .59-.227 1.155-.631 1.571-.404.417-.953.651-1.525.651s-1.12-.234-1.524-.65a2.257 2.257 0 0 1-.632-1.572c0-.589.227-1.154.632-1.57.404-.417.952-.652 1.524-.652Z'/%3E%3C/svg%3E") center/24px 24px no-repeat;
 
     &[aria-selected=true] {
         background: #3c76f1 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath fill='%23fff' d='M7.334 2.29c.445.413.48 1.112.081 1.57L4.181 7.563a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 5.753a1.145 1.145 0 0 1 0-1.574 1.051 1.051 0 0 1 1.522 0l.993 1.023L5.807 2.37a1.053 1.053 0 0 1 1.523-.084l.004.005Zm0 7.407c.445.412.48 1.11.081 1.569l-3.234 3.703a1.047 1.047 0 0 1-.773.366 1.085 1.085 0 0 1-.79-.324L.817 13.159a1.13 1.13 0 0 1 0-1.569 1.055 1.055 0 0 1 1.522 0l.993 1.023L5.807 9.78a1.053 1.053 0 0 1 1.523-.083h.004Zm3.23-4.73c0-.82.642-1.482 1.437-1.482h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.661-1.437-1.48Zm0 7.405c0-.82.642-1.481 1.437-1.481h10.062c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H12c-.795 0-1.437-.662-1.437-1.48Zm-2.875 7.406c0-.82.642-1.481 1.437-1.481h12.937c.795 0 1.437.662 1.437 1.481 0 .82-.642 1.481-1.437 1.481H9.126c-.795 0-1.437-.662-1.437-1.48Zm-5.03-2.222c.571 0 1.12.235 1.524.651.404.417.631.982.631 1.571 0 .59-.227 1.155-.631 1.571-.404.417-.953.651-1.525.651s-1.12-.234-1.524-.65a2.257 2.257 0 0 1-.632-1.572c0-.589.227-1.154.632-1.57.404-.417.952-.652 1.524-.652Z'/%3E%3C/svg%3E") center/24px 24px no-repeat;
@@ -78,7 +76,7 @@
     border-radius: 15px;
     line-height: 20px;
 
-    @include text-style('b3','blue');
+    @include text-style('b3', 'blue');
 
     &:hover {
         color: #fff;
@@ -86,7 +84,7 @@
         @include bg-color('blue');
     }
 
-    & + .edit_btn {
+    &+.edit_btn {
         margin-top: 15px;
     }
 }
@@ -142,8 +140,8 @@
         .floating_wrap {
             box-sizing: border-box;
             width: calc(60%);
-            
-            &.is_show + .google_map {
+
+            &.is_show+.google_map {
                 left: calc(60%);
             }
         }
@@ -173,7 +171,7 @@
 }
 
 .locationlist_item {
-    & + .locationlist_item {
+    &+.locationlist_item {
         margin-top: 48px;
     }
 }
@@ -226,7 +224,7 @@
 
     &:first-child {
         margin-left: 0;
-        
+
         &::before {
             display: none;
         }
@@ -357,7 +355,7 @@
         margin-top: 2px;
         line-height: 18px;
 
-        @include text-style('b4','gray1');
+        @include text-style('b4', 'gray1');
 
         &::before {
             position: absolute;
@@ -408,6 +406,10 @@
     padding: 40px 32px 0;
     overflow: hidden;
 
+    @media (max-width: 769px) {
+        padding: 40px 10px;
+    }
+
     &.is_edit {
         height: 100%;
         padding-top: 0;
@@ -416,6 +418,11 @@
             position: absolute;
             top: 40px;
             left: 32px;
+
+            @media (max-width: 769px) {
+                top: 0;
+                left: 10px;
+            }
         }
 
         .content_wrap {
@@ -446,7 +453,11 @@
     z-index: 100;
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.05));
     transform: translateX(-100%);
-    transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
+
+    @media (max-width: 769px) {
+        width: 100%;
+    }
 
     .handle {
         position: absolute;
@@ -458,6 +469,10 @@
         border-radius: 0 6px 6px 0;
         transform: translateY(-50%);
         cursor: pointer;
+
+        @media (max-width: 769px) {
+            right: 0;
+        }
 
         &::after {
             position: absolute;
@@ -473,19 +488,24 @@
 
     &.is_edit {
         transform: translateX(-449px);
+
+        @media (max-width: 769px) {
+            transform: translateX(calc(-100% + 20px));
+            background-color: rgba(255, 255, 255, 0);
+        }
     }
 
     &.is_show {
         transform: translateX(0);
 
-        .floating_area {
-            overflow: auto;
-        }
-
         .handle {
             &::after {
                 transform: translateX(-50%) translateY(-50%) rotate(180deg);
             }
+        }
+
+        @media (max-width: 769px) {
+            background-color: #fff;
         }
     }
 }
@@ -497,7 +517,7 @@
     line-height: 14px;
     text-align: center;
 
-    @include text-style('b4','gray1');
+    @include text-style('b4', 'gray1');
 
     &::before {
         position: absolute;
@@ -515,8 +535,8 @@
     display: flex;
     width: 100%;
     align-items: center;
-    
-    & + .duration_wrap {
+
+    &+.duration_wrap {
         margin-top: 20px;
     }
 }
@@ -544,6 +564,10 @@
 
 .content_wrap {
     display: flex;
+
+    @media (max-width: 769px) {
+        flex-direction: column;
+    }
 }
 
 .droppable_wrap {
