--- a/src/app/create/Create.module.scss
+++ b/src/app/create/Create.module.scss
@@ -13,17 +13,29 @@
     transform: translateX(0);
     transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
     z-index: 2;
+    overflow-y: auto;
 
     &.is_active {
         transform: translateX(-100%);
+    }
+
+    @media (max-width: 769px) {
+        width: 100%;
+        height: 100%;
     }
 }
 
 .main_title {
     @include text-style('s1', 'black');
 
-    margin-top: 60px;
+    margin-top: 120px;
     line-height: 38px;
+
+    @media (max-width: 769px) {
+        font-size: 25px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
 }
 
 .desc {
@@ -85,6 +97,12 @@
             border-left: 2px solid #fff;
         }
     }
+
+    @media (max-width: 769px) {
+        position: absolute;
+        top: 25px;
+        z-index: 100;
+    }
 }
 
 .nav_arrow_btn_left {
@@ -96,6 +114,10 @@
             margin-left: 5px;
         }
     }
+
+    @media (max-width: 769px) {
+        left: 0;
+    }
 }
 
 .nav_arrow_btn_right {
@@ -106,6 +128,10 @@
             transform: rotate(135deg);
             margin-right: 5px;
         }
+    }
+
+    @media (max-width: 769px) {
+        right: 0;
     }
 }
 
@@ -124,6 +150,10 @@
         background-color: #3c76f1;
         color: #fff;
     }
+
+    @media (max-width: 769px) {
+        margin-bottom: 32px;
+    }
 }
 
 .plan_title {
@@ -141,6 +171,10 @@
     .next_btn {
         margin-top: 32px;
     }
+
+    @media (max-width: 769px) {
+        padding: 0 32px;
+    }
 }
 
 .input_wrap {
@@ -150,6 +184,10 @@
     background-color: #f7f7fb;
     border-radius: 65px;
     padding: 20px;
+
+    @media (max-width: 769px) {
+        min-width: 100%;
+    }
 }
 
 .input {
@@ -162,6 +200,10 @@
 
     &::placeholder {
         @include text-style('b1', 'gray1');
+    }
+
+    @media (max-width: 769px) {
+        text-align: start;
     }
 }
 
@@ -201,6 +243,7 @@
 
         .react-datepicker {
             display: flex;
+            flex-wrap: wrap;
             gap: 100px;
         }
 
