--- a/src/app/my/My.module.scss
+++ b/src/app/my/My.module.scss
@@ -8,22 +8,35 @@
     .profile_wrap {
         height: 344px;
         background-color: #f7f7fb;
+        padding: 0 32px;
+
+        @media (max-width: 769px) {
+            height: auto;
+        }
     }
 
     .profile_area {
         position: relative;
-        width: 960px;
+        width: 100%;
+        max-width: 960px;
         margin: 134px auto 0;
+
+        @media (max-width: 769px) {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 10px;
+            margin-bottom: 30px;
+        }
     }
 
     .nickname {
-        @include text-style('s1' , 'black');
+        @include text-style('s1', 'black');
 
         line-height: 38px;
     }
 
     .desc {
-        @include text-style('b1' , 'black');
+        @include text-style('b1', 'black');
 
         margin-top: 8px;
         line-height: 25px;
@@ -33,9 +46,13 @@
         display: flex;
         margin-top: 32px;
 
+        @media (max-width: 769px) {
+            margin-top: 0;
+        }
+
         .edit_btn {
             @include text-style('b2-2', 'black');
-            
+
             padding: 0 20px;
             background-color: #fff;
             border-radius: 42px;
@@ -52,6 +69,10 @@
         background: #f1f3f5 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='71' height='71' fill='none'%3E%3Cpath fill='%239CA3AF' d='M35.5 44.18c9.173 0 17.33 4.428 22.523 11.301 1.118 1.48 1.677 2.22 1.659 3.219-.014.772-.5 1.746-1.107 2.223-.787.617-1.877.617-4.056.617H16.482c-2.18 0-3.27 0-4.056-.617-.608-.477-1.093-1.451-1.107-2.223-.019-1 .54-1.74 1.658-3.219C18.17 48.608 26.327 44.18 35.5 44.18ZM35.5 35.499c-7.191 0-13.02-5.83-13.02-13.021 0-7.191 5.829-13.021 13.02-13.021s13.021 5.83 13.021 13.02c0 7.192-5.83 13.022-13.02 13.022Z'/%3E%3C/svg%3E") center/70px 70px no-repeat;
         border-radius: 50%;
         overflow: hidden;
+
+        @media (max-width: 769px) {
+            position: static;
+        }
     }
 
     .img {
@@ -63,12 +84,15 @@
     }
 
     .plans_wrap {
-        width: 960px;
+        width: 100%;
+        max-width: 960px;
         margin: 85px auto 172px;
     }
 
     .title_wrap {
         display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
         justify-content: space-between;
         align-self: flex-start;
         width: 100%;
@@ -76,13 +100,17 @@
     }
 
     .title {
-        @include text-style('s1','black');
+        @include text-style('s1', 'black');
 
         vertical-align: top;
+
+        @media (max-width: 769px) {
+            font-size: 20px;
+        }
     }
 
     .count {
-        @include text-style('s3-1','gray1');
+        @include text-style('s3-1', 'gray1');
 
         margin-left: 8px;
         vertical-align: top;
@@ -93,8 +121,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 0 32px;
 
-        &+ .plans_area {
+        &+.plans_area {
             margin-top: 108px;
         }
 
