--- a/src/app/plan/[planId]/Plan.module.scss
+++ b/src/app/plan/[planId]/Plan.module.scss
@@ -141,6 +141,10 @@
             box-sizing: border-box;
             width: calc(60%);
 
+            @media (max-width: 769px) {
+                width: 100%;
+            }
+
             &.is_show+.google_map {
                 left: calc(60%);
             }
@@ -183,6 +187,10 @@
 .total_location_list {
     display: flex;
     margin-top: 20px;
+
+    @media (max-width: 769px) {
+        flex-direction: column;
+    }
 }
 
 .locationlist_list {
@@ -202,7 +210,7 @@
         width: 1px;
         top: 40px;
         bottom: 40px;
-        right: 286px;
+        right: 266px;
         background-color: red;
     }
 }
@@ -211,6 +219,11 @@
     position: relative;
     width: 225px;
     margin-left: 30px;
+
+    @media (max-width: 769px) {
+        margin-left: 0;
+        margin-top: 10px;
+    }
 
     &::before {
         position: absolute;
@@ -236,7 +249,7 @@
         height: 16px;
         margin: 4px 8px 0 0;
         border-radius: 50%;
-        line-height: 18px;
+        line-height: 16px;
         vertical-align: top;
         text-align: center;
 
@@ -329,12 +342,12 @@
     .order {
         position: absolute;
         top: 50%;
-        left: -44px;
+        left: -24px;
         width: 16px;
         height: 16px;
         background-color: red;
         border-radius: 50%;
-        line-height: 18px;
+        line-height: 16px;
         text-align: center;
         z-index: 20;
         transform: translateY(-50%);
@@ -404,7 +417,11 @@
 .floating_area {
     position: relative;
     padding: 40px 32px 0;
-    overflow: hidden;
+    overflow-y: auto;
+
+    @media (max-width: 769px) {
+        padding: 40px 10px;
+    }
 
     @media (max-width: 769px) {
         padding: 40px 10px;
@@ -469,6 +486,7 @@
         border-radius: 0 6px 6px 0;
         transform: translateY(-50%);
         cursor: pointer;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
         @media (max-width: 769px) {
             right: 0;
@@ -499,6 +517,7 @@
         transform: translateX(0);
 
         .handle {
+
             &::after {
                 transform: translateX(-50%) translateY(-50%) rotate(180deg);
             }
@@ -506,6 +525,11 @@
 
         @media (max-width: 769px) {
             background-color: #fff;
+
+            .handle {
+                right: 0;
+                border-radius: 6px 0 0 6px;
+            }
         }
     }
 }
