--- a/src/app/components/Header.module.scss
+++ b/src/app/components/Header.module.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
     height: 64px;
-    padding: 0 32px;
+    padding: 0 24px;
     z-index: 5000;
 }
 
@@ -114,7 +114,7 @@
 
 @media (min-width: 1024px) {
     .header_wrap {
-        width: 960px;
+        max-width: 1380px;
         margin: 0 auto;
     }
 
