--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -7,8 +7,14 @@
 .section_1_2 {
   position: relative;
   overflow: hidden;
-  margin: 66px 32px 0;
+  margin: 66px auto;
   border-radius: 20px;
+  height: 80vh;
+  max-width: 1380px;
+
+  @media (max-width: 769px) {
+    margin: 66px 24px 0;
+  }
 
   &::after {
     position: absolute;
@@ -19,6 +25,76 @@
     border-radius: inherit;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.42));
     content: "";
+
+    @media (max-width: 769px) {
+      background: rgba(0, 0, 0, 0.42);
+    }
+  }
+}
+
+.description {
+  position: absolute;
+  top: 100px;
+  right: 60px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  text-align: right;
+  align-items: end;
+  z-index: 1000;
+  font-weight: 500;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+
+  p {
+    font-size: 60px;
+    font-weight: bold;
+  }
+
+  span {
+    font-size: 28px;
+  }
+
+  button {
+    background: #fff;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 50px;
+    padding: 15px 25px;
+  }
+
+  .br {
+    display: none;
+  }
+
+  @media (max-width: 769px) {
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    left: 0;
+    gap: 18px;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+
+    p {
+      font-size: 26px;
+      line-height: 40px;
+    }
+
+    span {
+      font-size: 18px;
+      line-height: 30px;
+    }
+
+    button {
+      font-size: 16px;
+      padding: 10px 20px;
+    }
+
+    .br {
+      display: inline;
+    }
   }
 }
 
@@ -48,7 +124,7 @@
 .img_wrap {
   width: 100%;
   flex-shrink: 0;
-  height: 506px;
+  height: 80vh;
 }
 
 .img {
