Refactor Search component and styles; implement infinite scroll with updated fetch logic and enhance layout responsiveness

--- a/src/app/search/search.module.scss
+++ b/src/app/search/search.module.scss
@@ -80,6 +80,7 @@ body:has(.search_field_wrap) {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    min-height: 300px;
 
     @media (max-width: 769px) {
         width: 100%;
