--- a/src/app/plan/[planId]/Plan.module.scss
+++ b/src/app/plan/[planId]/Plan.module.scss
@@ -210,8 +210,13 @@
         width: 1px;
         top: 40px;
         bottom: 40px;
-        right: 266px;
+        left: -17px;
         background-color: red;
+
+        @media (max-width: 769px) {
+            right: 32px;
+            left: auto;
+        }
     }
 }
 
@@ -309,8 +314,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    width: 250px;
-    margin-left: auto;
+    width: 100%;
     flex-shrink: 0;
 
     .link {
@@ -353,6 +357,11 @@
         transform: translateY(-50%);
 
         @include text-style('n1', 'white');
+
+        @media (max-width: 769px) {
+            right: 24px;
+            left: auto;
+        }
     }
 
     .name {
@@ -423,10 +432,6 @@
         padding: 40px 10px;
     }
 
-    @media (max-width: 769px) {
-        padding: 40px 10px;
-    }
-
     &.is_edit {
         height: 100%;
         padding-top: 0;
@@ -443,7 +448,7 @@
         }
 
         .content_wrap {
-            height: 100%;
+            height: auto;
         }
 
         .schedule_wrap {
@@ -453,7 +458,7 @@
         }
 
         .location_list_area {
-            height: 100%;
+            height: auto;
         }
     }
 }
@@ -564,6 +569,7 @@
 .drag_item_wrap {
     position: relative;
     padding: 10px 15px 10px 24px;
+    cursor: grab;
 
     &:hover {
         background-color: rgba(#3C76F1, 0.05);
@@ -591,18 +597,9 @@
 }
 
 .droppable_wrap {
-    padding: 30px 0 0 30px;
-    border-left: 1px solid #e2e2e2;
 
     &.is_total {
-        padding: 0;
-
-        &:first-child {
-            border-left: 0;
-
-            .drag_item_wrap {
-                padding-left: 0;
-            }
-        }
+        border-bottom: 1px solid #e2e2e2;
+        padding: 0 0 8px 0;
     }
 }
